--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
     "@ionic-native/core": "4.6.0",
+    "@ionic-native/email-composer": "^4.6.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/status-bar": "4.6.0",
     "@ionic/storage": "^2.1.3",
     "angularfire2": "^5.0.0-rc.6",
+    "cordova-plugin-email-composer": "^0.8.15",
     "cordova-sqlite-storage": "^2.3.0",
     "firebase": "^4.12.1",
     "ionic-angular": "3.9.2",
@@ -41,7 +43,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-email-composer": {}
     }
   }
 }
